# ubdc-airbnb

./: .actrc  .bumpversion.cfg  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENCE.txt  README.md  Taskfile.yml  build.ps1  build.sh  docker-compose-dev.yml  docker-compose-local.yml  docker-compose.db.yaml  docker-compose.dev-services.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.rabbit.yaml  docker-compose.yml  docker-entrypoint.sh  environment-windows.yml  environment.yml  makefile  notes.md  pyproject.toml  requirements.in  requirements.txt  start-broker.ps1
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.devcontainer/rabbit/: Dockerfile  rabbitPlugins
.github/workflows/: pr-test.yml
README/: operations.md  setup.md
README_SETUP/: SETUP.md
devtasks/: docker.py
docker/airbnb/: Dockerfile
docker/postgis/: Dockerfile
docker/postgis/config/: postgresql.cfg
samples/: calendar_response.sample.json  listing_details.sample.json  user_detail.sample.json
src/dj_airbnb/: .dockerignore  manage.py
src/dj_airbnb/airbnbapi/: api.py
src/dj_airbnb/app/: __init__.py  apps.py  managers.py  models.py  signals.py  task_managers.py  tasks.py
src/dj_airbnb/app/migrations/: 0002_auto_20210315_1630.py  0003_auto_20210317_1207.py  0004_auto_20210323_1758.py  0005_auto_20210325_1029.py  0006_auto_20210326_1250.py  0007_alter_airbnbresponse__type.py  0008_aoishape_scan_for_new_listings.py  0009_ubdcgrid_datetime_listings_scan.py  0010_rename_datetime_listings_scan_ubdcgrid_datetime_last_listings_scan.py  0011_rename_comment_updated_at_airbnblisting_reviews_updated_at.py  0012_aoishape_collect_bookings.py  0013_alter_airbnbresponse__type.py  0014_auto_20210511_1106.py  0015_auto_20210618_1411.py
src/dj_airbnb/app/operations/: bookings.py  calendars.py  discovery.py  grids.py  listing_details.py  reviews.py
src/dj_airbnb/app/tests/: __init__.py  test_BookingOps.py  test_CalendarOps.py  test_CoreOps.py  test_GridOps.py  test_ListingDetailsOps.py  test_ReviewsOps.py  test_UnitTests.py  test_UserOps.py  test_managment.py  test_misc.py
src/dj_airbnb/app/utils/: grids.py  users.py
src/dj_airbnb/dj_airbnb/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/ubdc_airbnb/: manage.py
src/ubdc_airbnb/core/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/ubdc_airbnb/ubdc_airbnb/: __init__.py  apps.py  convenience.py  decorators.py  errors.py  managers.py  model_defaults.py  models.py  signals.py  task_managers.py  tasks.py  workunits.py
src/ubdc_airbnb/ubdc_airbnb/airbnb_interface/: __init__.py  airbnb_api.py
src/ubdc_airbnb/ubdc_airbnb/migrations/: 0001_initial.py  0002_alter_airbnblisting_geom_3857.py  0003_airbnbuser_ubdc_airbnbuser_d87o85f2_idx.py  0004_alter_airbnbresponse_listing_id_and_more.py  0005_alter_airbnbuser_about_alter_airbnbuser_first_name_and_more.py
src/ubdc_airbnb/ubdc_airbnb/operations/: __init__.py  bookings.py  calendars.py  (+5 more)
tests/: __init__.py  conftest.py  payload_generators.py  test_BookingOps.py  test_CalendarOps.py  test_CoreOps.py  test_GridOps.py  test_ListingDetailsOps.py  test_ReviewsOps.py  test_UnitTests.py  test_UserOps.py  test_managment.py  test_misc.py  test_models.py  test_tasks.py  test_units_test.py  test_utils.py  test_workflows.py
tests/beat_ops/: test_op_discover_new_listings_periodical.py  test_op_update_calendar_periodical.py  test_op_update_listing_details_periodical.py
tests/celery_intergration/: test_celery_configuration.py  test_celery_intergration.py
tests/factories/: calendar.py  calendarSample.json
tests/management/: README.md  conftest.py  test_add_aoi.py  test_add_mask.py  test_add_quadkey.py  test_create_test_area.py  test_edit_aoi.py  test_extract_data.py  test_generate_grid.py  test_import_world_mask.py  test_list_aoi.py  test_managment.py  test_run_beat_job.py  test_scrape_listing_data.py
tests/models/: test_airbnbresponse_model.py  test_models.py
tests/operations/: op_update_calendars_for_listing_ids.py
tests/tasks/: test_task_register_listings_or_divide_at_quadkey.py  test_task_update_calendar.py  test_tasks.py
tests/testFiles/: santorini_mask.dbf  santorini_mask.shp  santorini_mask.shx
tests/testFiles/test_aois/: README  teheran-aoi-1.geojson  teheran-aoi-2.geojson
tests/testFixtures/: EDIN_AOI_SHAPE.json  EDIN_GRID_LISTINGS.json  UBDCGrid.json
tests/units/: test_units_test.py
tests/workflows/: test_calendar_workflows.py  test_discover_listing_workflows.py  test_listing_workflows.py
(+61 files in other folders)
