[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.poe.tasks]
lint = { cmd = "pylint src" }
format = { cmd = "black src" }

[tool.poe.tasks._get_git_hash]
cmd = "git rev-parse --short HEAD"

[tool.poe.tasks.build-image]
cmd = "docker build . -t ubdc/ubdc-airbnb:${GIT_HASH}"
uses = { GIT_HASH = "_get_git_hash" }

[tool.poe.tasks.generate-docker-compose]
script = "devtasks.docker:generate_docker_compose"
print_result = true
uses = { GITHUB_SHA = "_get_git_hash" }

[tool.poetry]
name = "ubdc-airbnb"
version = "0.1.0"
description = ""
authors = ["nikos ves <nick.ves@glasgow.ac.uk>"]
readme = "README.md"
packages = [
  { include = "ubdc_airbnb", from = 'src/ubdc_airbnb' },
  { include = "core", from = 'src/ubdc_airbnb' },
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4"
celery = "^5.3.6"
kombu = { version = ">v5.3.0b2" }
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
jsonpath-ng = "^1.5.3"
more-itertools = "^9.0.0"
mercantile = "^1.2.1"
requests = "^2.28.1"
psycopg = "^3.1.18"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.2.1"
pytest = "^7.2.1"
pytest-django = "^4.5.2"
pytest-env = "^0.8.1"
pytest-celery = "^0.0.0"
responses = "^0.22.0"
pylint = "^2.16.1"
poethepoet = "^0.18.1"
pylint-django = "^2.5.3"
pylint-celery = "^0.3"
celery-types = "^0.22.0"
django-types = "^0.19.1"
pytest-mock = "^3.12.0"
faker = "^23.2.1"


[tool.pylint.messages_control]
disable = 'C,R,logging-fstring-interpolation'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
env = [
  "DATABASE_DBNAME=postgres",
  "DATABASE_HOST=db",
  "DATABASE_PASSWORD=postgres",
  "DATABASE_PORT=5432",
  "DATABASE_USERNAME=postgres",
  "RABBITMQ_HOST=rabbit",
  "RABBITMQ_PASSWORD=rabbitmq",
  "RABBITMQ_PORT=5672",
  "RABBITMQ_USERNAME=rabbitmq",
  "RABBITMQ_VHOST=/",
]
