[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
[tool.ruff.format]
line-ending='lf'
indent-style='tab'

[tool.isort]
profile = "black"


[tool.poetry]
name = "ubdc-airbnb"
version = "3.0.0"
description = "A django based application for scraping airbnb data."
authors = ["nikos ves <nick.ves@glasgow.ac.uk>"]
readme = "README.md"
packages = [
  { include = "ubdc_airbnb", from = 'src/ubdc_airbnb' },
  { include = "core", from = 'src/ubdc_airbnb' },
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4"
celery = "^5.3.6"
kombu = { version = ">v5.3.0b2" }
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
jsonpath-ng = "^1.5.3"
more-itertools = "^9.0.0"
mercantile = "^1.2.1"
requests = "^2.28.1"
psycopg = "^3.1.18"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.2.1"
pytest = "^7.2.1"
pytest-django = "^4.5.2"
pytest-celery = "^0.0.0"
responses = "^0.22.0"
pylint = "^2.16.1"
poethepoet = "^0.18.1"
pylint-django = "^2.5.3"
pylint-celery = "^0.3"
celery-types = "^0.22.0"
django-types = "^0.19.1"
pytest-mock = "^3.12.0"
faker = "^23.2.1"
pytest-cov = "^6.0.0"

[tool.pylint.messages_control]
disable = 'C,R,logging-fstring-interpolation'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
log_cli = true
log_cli_level = "INFO"
